# VZhTelegram

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: scoring.yaml  settings.yaml  sources.yaml  style.yaml
scripts/: run_pipeline.py  seed_sources.py
src/: pipeline.py  scheduler.py
src/bot/: app.py  handlers.py  keyboards.py  models.py  publisher.py
src/collector/: base.py  manager.py  models.py  rss.py  scraper.py  social.py
src/generator/: client.py  models.py  postprocessor.py  prompt.py
src/scorer/: engine.py  factors.py  models.py  selector.py
src/storage/: db.py  dedup.py  migrations.py  models.py  repository.py
